# Fast-Application-programing-Interface

./: .gitignore  database.py  main.py  models.py  pyproject.toml
fastapi/: main.py
fastapi-app/: main.py  pyproject.toml
fastapi-app/static/: style.css
fastapi-app/template/: index.html
static/: about.css  animations.css  cart.css  checkout.css  contact.css  dashboard.css  landing.css  login.css  orders.css  product.css  products.css  quote.css  services.css  signup.css
template/: about.html  cart.html  checkout.html  contact.html  dashboard.html  dashboard_customers.html  dashboard_messages.html  dashboard_orders.html  dashboard_quotes.html  landing.html  login.html  order_detail.html  orders.html  product.html  products.html  profile.html  quote.html  services.html  signup.html
tests/: conftest.py  test_models.py  test_routes.py
web/: main.py  pyproject.toml
